--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   flickr:
   github: 
   instagram:
-  linkedin: 
+  linkedin: meliheyuboglu
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
