--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Melih Eyuboglu
 
 # Short bio or description (displayed in the header)
-description: Interested in Field of Cyber Security
+description: Interested in Cyber Security
 
 
 #
