--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
-favicon: /images/favicon3.png
+favicon: images/favicon3.png
 
 # Exclude these files from your production _site
 exclude:
