--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Melih Eyuboglu
 
 # Short bio or description (displayed in the header)
-description: Computer Science Student
+description: Junior SAP Developer & IS-U Consultant
 
 
 #
